Select Scala toolchain by version and add JVM flags to the toolchain
Currently there is no good way to provide JVM flags to our Scala
toolchain. This change adds the ability to specify JVM flags used when
invoking the Scala toolchain. This is particularly relevant for JDK 25
where lots of warnings about Unsafe appear without specifying certain
JVM flags.

Currently the Scala toolchain is selected by toolchain name. This causes
challenges because the Scala toolchain from the consuming workspace may
not match the toolchain name of another ruleset. This causes the Scala
toolchain from that other ruleset to be used, but the JDK toolchain from
the consuming workspace is used.

This can cause problems where a JDK 25 toolchain is used with a Scala
toolchain that doesn't provide JVM flags needed to silence warnings that
appear when calling the Scala compiler.

Changing the Scala toolchain to be selected by version causes the
consuming workspace's Scala toolchains to be used, just like the JDK
toolchain and other Bazel toolchains.